--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "mongoose": "^8.2.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
