--- a/package.json
+++ b/package.json
@@ -23,18 +23,24 @@
   },
   "homepage": "https://github.com/olegdemchenko/chat-service#readme",
   "dependencies": {
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.2.2",
+    "passport": "^0.7.0",
+    "passport-http-bearer": "^1.0.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.1",
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.7",
     "@types/nodemon": "^1.19.6",
+    "@types/passport-http-bearer": "^1.0.41",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "eslint": "^8.56.0",
