--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.2.2",
-    "passport": "^0.7.0",
-    "passport-http-bearer": "^1.0.1",
+    "socket.io": "^4.7.5",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
