add tracking user online status

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,5 +33,14 @@ services:
       timeout: 10s
       retries: 3
       start_period: 20s
+  redis:
+    container_name: chat_redis
+    image: redis
+    restart: always
+    command: --port 6380
+    ports:
+      - 6380:6380
+    expose:
+      - 6380
 volumes:
   chat-db-data:
