--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.2.2",
+    "redis": "^4.6.13",
     "socket.io": "^4.7.5",
     "typescript": "^5.3.3"
   },
