--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/olegdemchenko/chat-service#readme",
   "dependencies": {
+    "@redis/client": "^1.5.14",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
