--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 PORT=5000
+DEBUG_PORT=9230
+AUTH_SERVICE_URL=http://authservice-server-1:4000/api/auth/authenticate
 DB_URL=mongodb://0.0.0.0:27017/chat_database
 DB_NAME=chat_database
 DB_USER=user
 DB_PASSWORD=password
+DB_PORT=27017
