--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mongoose": "^8.2.2",
     "redis": "^4.6.13",
     "socket.io": "^4.7.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -42,6 +43,7 @@
     "@types/node": "^20.10.7",
     "@types/nodemon": "^1.19.6",
     "@types/passport-http-bearer": "^1.0.41",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "eslint": "^8.56.0",
