--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "nodemon",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "postinstall": "husky"
+    "postinstall": "husky",
+    "lint-staged": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -44,9 +45,15 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.5",
     "nodemon": "^3.0.3",
     "prettier": "^3.1.1",
     "ts-node": "^10.9.2"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,json,md}": [
+      "prettier --write"
+    ]
   },
   "packageManager": "yarn@4.2.2"
 }
