--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "mongoose": "^8.2.2",
     "redis": "^4.6.13",
     "socket.io": "^4.7.5",
-    "typescript": "^5.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -58,7 +57,8 @@
     "lint-staged": "^15.2.5",
     "nodemon": "^3.0.3",
     "prettier": "^3.1.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "lint-staged": {
     "src/**/*.{js,ts,json,md}": [
