--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "nodemon": "^3.0.3",
     "prettier": "^3.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "5.4.3"
   },
   "lint-staged": {
     "src/**/*.{js,ts,json,md}": [
