--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 node_modules
+/.pnp
+.pnp.*
+
 .env
+.vscode
+
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+yarn-debug.log*
+yarn-error.log*
