--- a/package.json
+++ b/package.json
@@ -24,17 +24,26 @@
   },
   "homepage": "https://github.com/olegdemchenko/chat-service#readme",
   "dependencies": {
+    "@redis/client": "^1.5.14",
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "typescript": "^5.3.3"
+    "mongoose": "^8.2.2",
+    "redis": "^4.6.13",
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.1",
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.7",
     "@types/nodemon": "^1.19.6",
+    "@types/passport-http-bearer": "^1.0.41",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "eslint": "^8.56.0",
@@ -48,7 +57,8 @@
     "lint-staged": "^15.2.5",
     "nodemon": "^3.0.3",
     "prettier": "^3.1.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "5.4.3"
   },
   "lint-staged": {
     "src/**/*.{js,ts,json,md}": [
