--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
     "mongoose": "^8.2.2",
     "redis": "^4.6.13",
@@ -41,7 +42,6 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
