--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 .env
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
