--- a/package.json
+++ b/package.json
@@ -1,51 +1,97 @@
 {
   "name": "chat-service",
   "version": "1.0.0",
-  "description": "A Node.js chat service",
-  "main": "index.js",
+  "description": "",
+  "author": "",
+  "private": true,
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.12.2"
   },
+  "license": "UNLICENSED",
   "scripts": {
-    "dev": "nodemon",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "prepare": "npx husky install"
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --tsc --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "postinstall": "husky",
+    "lint-staged": "lint-staged"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/olegdemchenko/chat-service.git"
-  },
-  "author": "Oleg Demchenko",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/olegdemchenko/chat-service/issues"
-  },
-  "homepage": "https://github.com/olegdemchenko/chat-service#readme",
   "dependencies": {
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^10.1.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^10.4.8",
+    "@nestjs/websockets": "^10.4.8",
+    "@redis/client": "^1.5.14",
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
-    "typescript": "^5.3.3"
+    "mongoose": "^8.2.2",
+    "redis": "^4.6.13",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.1",
-    "@types/express": "^4.17.21",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.7",
-    "@types/nodemon": "^1.19.6",
-    "@typescript-eslint/eslint-plugin": "^6.18.0",
-    "@typescript-eslint/parser": "^6.18.0",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "29.2.4",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "18.11.18",
+    "@types/supertest": "^2.0.11",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.3",
-    "nodemon": "^3.0.3",
-    "prettier": "^3.1.1",
-    "ts-node": "^10.9.2"
-  }
+    "jest": "29.3.1",
+    "lint-staged": "^15.2.5",
+    "prettier": "^2.3.2",
+    "source-map-support": "^0.5.20",
+    "supertest": "^6.1.3",
+    "ts-jest": "29.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "4.1.1",
+    "typescript": "^4.7.4"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "prettier --write"
+    ]
+  },
+  "packageManager": "yarn@4.5.1"
 }
