--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,9 +30,7 @@ jobs:
         cache: 'yarn'
     - name: Install dependencies
       run: yarn
-    - name: Install nest globally
-      run: yarn global nest
     - name: Run linter
       run: yarn run lint
     - name: Build app
-      run: yarn run build
+      run: yarn dlx @nestjs/cli build
