--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: yarn
-    - run: yarn run lint
+    - name: Install dependencies
+      run: yarn
+    - name: Run linter
+      run: yarn run lint
+    - name: Build app
+      run: yarn dlx @nestjs/cli build
