--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,12 +21,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Enable Corepack
       run: corepack enable
+      
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: yarn
-    - run: yarn run lint
+
+    - name: Install dependencies
+      run: yarn
+    - name: Run linter
+      run: yarn run lint
+    - name: Build app
+      run: yarn dlx @nestjs/cli build
